package com.yyf.app.ch0.association;

import lombok.Data;


/**
 * 气候
 */
@Data
public class Climate {
}
