package com.yyf.app.ch0.composition;

import lombok.Data;

@Data
/**
 * 翅膀
 */
public class Wing {
}
