package com.yyf.app.ch0.depend;

import lombok.Data;

@Data
public class Water {

}
