package com.yyf.app.ch0.impl;

import com.yyf.app.ch0.Bird;

/**
 * 鸭子
 */
public class Duck extends Bird {

    @Override
    public void reproduction() {
        System.out.println("下蛋");
    }
}
