package com.yyf.app.ch0.interfaces;

public interface IFly {

    void fly();
}
