package com.yyf.app.ch0.interfaces;

/**
 * 讲人话
 */
public interface ILanguage {

    void speak();
}
